--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,9 @@ body {
   width: 100%;
   padding: 20px;
   display: grid;
-  grid-template-columns: repeat(5, 1fr) 3fr;
+  grid-template-columns: repeat(5, 0.7fr) 2fr 3fr;
   gap: 20px;
-  /* position: absolute;   */
+  margin-bottom: 50px;
 }
 
 #main-temp-container {
@@ -85,12 +85,14 @@ body {
 
 #feels-like-container #feels-like-temp {
   font-size: 2em;
+  /* position: absolute;
+  bottom: 1em; */
 }
 #feels-like-container #feels-like-text {
   font-size: 1em;
   text-transform: capitalize;
-  position: absolute;
-  bottom: 0;
+  /* position: absolute;
+  bottom: 0; */
 }
 
 #local-date-container {
@@ -116,7 +118,7 @@ body {
 }
 
 #weather-detail-button {
-  background-color: #303030;
+  background-color: #3030307a;
   padding: 10px;
   text-align: center;
 }
@@ -130,7 +132,7 @@ body {
 
 #weather-detail-button:hover {
   cursor: pointer;
-  background-color: #242424;
+  background-color: #303030;
 }
 
 #weather-detail-button:active {
@@ -139,20 +141,19 @@ body {
 
 #input-section {
   width: 100%;
-  height: 60%;
-  display: flex;
-  justify-content: flex-end;
-  gap: 10px;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1.5fr 1fr;
+  row-gap: 5px;
 }
 
 #input-section input {
-  width: 70%;
   background-color: #7c7c7cd0;
   border: none;
   padding-left: 20px;
   color: #fff;
   min-width: max-content;
+  font-size: 1em;
 }
 
 input::placeholder {
@@ -166,17 +167,16 @@ button:focus {
 }
 
 #input-section button {
-  width: 20%;
   border: none;
   text-transform: uppercase;
   font-size: 1em;
   letter-spacing: 1px;
-  background-color: rgb(250, 250, 250);
+  background-color: rgba(250, 250, 250, 0.541);
   min-width: max-content;
 }
 
 #input-section button:hover {
-  background-color: rgb(244, 244, 244);
+  background-color: rgba(244, 244, 244);
   cursor: pointer;
 }
 
@@ -281,17 +281,23 @@ li {
 
 #week-weather-container {
   width: 100%;
-  margin-bottom: 50px;
+  position: relative;
+}
+
+#week-weather-container > p {
+  position: absolute;
+  top: -15px;
+  font-size: 0.8em;
+  right: 0;
 }
 
 ul {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 li {
-  background-color: #242424a9;
-  padding: 10px 25px;
+  padding: 10px;
 }
 
 .fetched-value {
@@ -307,6 +313,10 @@ li {
   border: 1px solid;
   border-radius: 100%;
   position: absolute;
+}
+
+li p {
+  text-transform: capitalize;
 }
 
 /* ----------------------------------------------
@@ -390,18 +400,99 @@ footer {
   display: none;
 }
 
-/* Media queries for Small screens, laptops: 769px — 1024px*/
-@media screen and (min-width: 769px) and (max-width: 1044px) {
-}
-/* Media queries for iPads, Tablets: 481px — 768px*/
-@media screen and (min-width: 481px) and (max-width: 768px) {
-  .desktop-only {
-    display: none;
+/* Media queries for Small screens, laptops*/
+@media screen and (max-width: 1250px) {
+  #main-content-container {
+    grid-template-columns: repeat(7,1fr);
+    grid-template-rows: repeat(2,1fr);
+    row-gap: 40px;
+  }
+
+  #main-temp-container{
+    grid-column: 1/3;
+  }
+  #city-weather-container{
+    grid-column: 3/5;
+  }
+  #feels-like-container{
+    grid-column: 5/6;
+  }
+  #local-date-container{
+    grid-column: 6/7;
+  }
+  #weather-detail-button{
+    grid-column: 7/8;
+  }
+  #input-section{
+    grid-column: -8/-5;
+  }
+  #week-weather-container{
+    grid-column: -5/-1;
   }
 }
-/* Media queries for XS Mobile devices: 320px — 480px*/
-@media screen and (max-width: 320px) {
-  .desktop-only {
+
+/* Media queries for iPads, Tablets*/
+@media screen and (max-width: 968px) {
+  #main-content-container {
+    grid-template-columns: repeat(7,1fr);
+    grid-template-rows: repeat(3,1fr);
+    row-gap: 30px;
+  }
+
+  #main-temp-container{
+    grid-column: 1/3;
+  }
+  #city-weather-container{
+    grid-column: 3/5;
+  }
+  #feels-like-container{
+    grid-column: 5/6;
+  }
+  #local-date-container{
+    grid-column: 6/7;
+  }
+  #weather-detail-button{
+    grid-column: 7/8;
+    grid-row: 1/2;
+  }
+  #input-section{
+    grid-column: 1/8;
+  }
+  #week-weather-container{
+    grid-column: 1/8;
+  }
+}
+/* Media queries for XS Mobile devices*/
+@media screen and (max-width: 550px) {
+  #main-content-container {
+    grid-template-columns: repeat(7,1fr);
+    grid-template-rows: repeat(2,1fr);
+    row-gap: 30px;
+  }
+
+  #main-temp-container{
+    grid-column: 1/5;
+  }
+  #city-weather-container{
+    grid-column: 5/8;
+  }
+  #feels-like-container{
+    grid-column: 1/2;
+  }
+  #local-date-container{
+    grid-column: 2/4;
+  }
+  #weather-detail-button{
+    grid-column: 7/8;
+    grid-row: 2/3;
+  }
+  #input-section{
+    grid-column: 1/8;
     display: none;
   }
+  #week-weather-container{
+    grid-column: 1/8;
+    display: none;
+  }
+
 }
