--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ body {
   height: 100vh;
 }
 
+h1 {
+  display: none;
+}
+
 #main-content-container {
   background-color: #30303085;
   width: 100%;
@@ -117,25 +121,25 @@ body {
   bottom: 0;
 }
 
-#weather-detail-button{
+#weather-detail-button {
   background-color: #3030307a;
   padding: 10px;
   text-align: center;
 }
 
-#weather-detail-button p{
+#weather-detail-button p {
   position: relative;
   top: calc(50% - 30px);
   font-size: 1.4em;
   text-transform: capitalize;
 }
 
-#weather-detail-button:hover{
+#weather-detail-button:hover {
   cursor: pointer;
   background-color: #303030;
 }
 
-#weather-detail-button:active{
+#weather-detail-button:active {
   transform: scale(0.99);
 }
 
@@ -403,30 +407,30 @@ footer {
 /* Media queries for Small screens, laptops*/
 @media screen and (max-width: 1250px) {
   #main-content-container {
-    grid-template-columns: repeat(7,1fr);
-    grid-template-rows: repeat(2,1fr);
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     row-gap: 40px;
   }
 
-  #main-temp-container{
+  #main-temp-container {
     grid-column: 1/3;
   }
-  #city-weather-container{
+  #city-weather-container {
     grid-column: 3/5;
   }
-  #feels-like-container{
+  #feels-like-container {
     grid-column: 5/6;
   }
-  #local-date-container{
+  #local-date-container {
     grid-column: 6/7;
   }
-  #weather-detail-button{
+  #weather-detail-button {
     grid-column: 7/8;
   }
-  #input-section{
+  #input-section {
     grid-column: -8/-5;
   }
-  #week-weather-container{
+  #week-weather-container {
     grid-column: -5/-1;
   }
 }
@@ -434,81 +438,12 @@ footer {
 /* Media queries for iPads, Tablets*/
 @media screen and (max-width: 968px) {
   #main-content-container {
-    grid-template-columns: repeat(7,1fr);
-    grid-template-rows: repeat(3,1fr);
-    row-gap: 30px;
+    display: none;
   }
-
-  #main-temp-container{
-    grid-column: 1/3;
+  h1 {
+    display: block;
+    text-align: center;
+    color: #272727;
+    margin-top: 20px;
   }
-  #city-weather-container{
-    grid-column: 3/5;
-  }
-  #feels-like-container{
-    grid-column: 5/6;
-  }
-  #local-date-container{
-    grid-column: 6/7;
-  }
-  #weather-detail-button{
-    grid-column: 7/8;
-    grid-row: 1/2;
-  }
-  #input-section{
-    grid-column: 1/8;
-  }
-  #week-weather-container{
-    grid-column: 1/8;
-  }
-}
-/* Media queries for XS Mobile devices*/
-@media screen and (max-width: 550px) {
-  #main-content-container {
-    display: flex ;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  #main-temp-container{
-    flex-grow: 1;
-  }
-  #city-weather-container{
-    height: 80px;
-    width: 30%;
-  }
-  #feels-like-container{
-    height: 80px;
-    width: 30%;
-  }
-  #local-date-container{
-    height: 80px;
-    width: 30%;
-  }
-  #weather-detail-button{
-width: 45%;
-  }
-  #input-section{
-   width: 100%;
-
-  }
-
-  #weather-detail-button p{
-    position: static;
-  }
-
-  #week-weather-container{
-
-    margin-top: 30px;
-  }
-
-  ul{
-    flex-wrap: wrap;
-  }
-
-  #weather-details-container{
-    width: 100%;
-  }
-
-
 }
