--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,9 @@ footer {
 
 /* Media queries for iPads, Tablets and mobile*/
 @media screen and (max-width: 968px) {
+  body{
+    height: 100%;
+  }
   #main-content-container {
     display: none;
   }
@@ -444,6 +447,6 @@ footer {
     display: block;
     text-align: center;
     color: #272727;
-    margin-top: 20px;
+    margin-top: 40px;
   }
 }
