--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,22 @@
 
 body {
   color: #ececec;
-  background: url("../assets/image1.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
   background-color: #272727;
+  background-image: linear-gradient(
+    300deg,
+    rgb(64, 80, 255),
+    rgb(76, 78, 245),
+    rgb(89, 76, 235),
+    rgb(101, 73, 224),
+    rgb(114, 71, 214),
+    rgb(126, 69, 204),
+    rgb(139, 67, 194),
+    rgb(151, 65, 184),
+    rgb(164, 63, 174),
+    rgb(176, 60, 163),
+    rgb(189, 58, 153),
+    rgb(201, 56, 143)
+  );
   width: 100%;
   height: 100vh;
 }
@@ -24,13 +34,11 @@ h1 {
 }
 
 #main-content-container {
-  background-color: #30303085;
   width: 100%;
   padding: 20px;
   display: grid;
-  grid-template-columns: repeat(5, 0.7fr) 2fr 3fr;
+  grid-template-columns: repeat(5, 1fr) 2fr;
   gap: 20px;
-  margin-bottom: 50px;
 }
 
 #main-temp-container {
@@ -70,8 +78,6 @@ h1 {
 #city-weather-container #city-name {
   text-transform: uppercase;
   font-size: 1.5;
-  position: absolute;
-  bottom: 0;
 }
 
 #feels-like-container {
@@ -89,14 +95,11 @@ h1 {
 
 #feels-like-container #feels-like-temp {
   font-size: 2em;
-  /* position: absolute;
-  bottom: 1em; */
 }
+
 #feels-like-container #feels-like-text {
   font-size: 1em;
   text-transform: capitalize;
-  /* position: absolute;
-  bottom: 0; */
 }
 
 #local-date-container {
@@ -117,26 +120,24 @@ h1 {
   font-size: 0.65em;
   letter-spacing: 2px;
   text-transform: uppercase;
-  position: absolute;
-  bottom: 0;
 }
 
 #weather-detail-button {
-  background-color: #3030307a;
+  background-color: #ffffff28;
+  font-weight: 600;
   padding: 10px;
   text-align: center;
 }
 
 #weather-detail-button p {
   position: relative;
-  top: calc(50% - 30px);
   font-size: 1.4em;
   text-transform: capitalize;
 }
 
 #weather-detail-button:hover {
   cursor: pointer;
-  background-color: #303030;
+  background-color: #ffffff28;
 }
 
 #weather-detail-button:active {
@@ -152,7 +153,7 @@ h1 {
 }
 
 #input-section input {
-  background-color: #7c7c7cd0;
+  background-color: #ffffff28;
   border: none;
   padding-left: 20px;
   color: #fff;
@@ -190,16 +191,16 @@ button:focus {
 
 /* WEATHER DETAILS */
 #weather-details-container {
-  background-color: rgba(255, 255, 255, 0.2);
   transition: all 500ms;
-  width: 700px;
+  width: max-content;
   margin: 0 auto;
   min-height: max-content;
-  padding: 20px 0;
+  padding: 20px;
+  background-color: #ffffff28;
 }
 
 #weather-details-container h2 {
-  color: #242424;
+  color: #fff;
   text-align: center;
   margin-bottom: 40px;
   text-transform: capitalize;
@@ -215,24 +216,20 @@ button:focus {
 
 #weather-details-container #exit-button:hover {
   cursor: pointer;
-  border: 2px solid #242424;
+  border: 2px solid #fff;
 }
 
 #weather-details-container #weather-details-content {
-  width: 80%;
+  width: 100%;
   margin: 20px auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  gap: 20px;
 }
 
-#weather-details-container #weather-details-content .weather-detail {
-  background-color: #272727;
-}
 .weather-detail {
   text-align: center;
-  padding: 20px 0 20px 0;
+  padding: 20px;
 }
 
 .fetched-info {
@@ -286,18 +283,23 @@ li {
 #week-weather-container {
   width: 100%;
   position: relative;
+  padding: 30px 0;
+  background-color: #ffffff28;
+  margin: 20px 0;
 }
 
 #week-weather-container > p {
   position: absolute;
-  top: -15px;
+  top: 10px;
   font-size: 0.8em;
-  right: 0;
+  left: 10px;
 }
 
 ul {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 li {
@@ -404,49 +406,38 @@ footer {
   display: none;
 }
 
-/* Media queries for Small screens, laptops*/
-@media screen and (max-width: 1250px) {
-  #main-content-container {
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    row-gap: 40px;
+/* Media queries for iPads, Tablets and mobile*/
+@media screen and (max-width: 968px) {
+  body {
+    height: 100%;
   }
 
-  #main-temp-container {
-    grid-column: 1/3;
+  #main-content-container {
+    padding: 20px;
+    grid-template-columns: 1fr;
+    text-align: center;
+    gap: 30px;
   }
-  #city-weather-container {
-    grid-column: 3/5;
+
+  #weather-details-container {
+    width: 100%;
   }
-  #feels-like-container {
-    grid-column: 5/6;
-  }
-  #local-date-container {
-    grid-column: 6/7;
-  }
+
   #weather-detail-button {
-    grid-column: 7/8;
+    padding: 20px 0;
   }
-  #input-section {
-    grid-column: -8/-5;
+
+  #input-section button {
+    padding: 5px 0;
   }
-  #week-weather-container {
-    grid-column: -5/-1;
+
+  footer {
+    position: static;
   }
 }
 
-/* Media queries for iPads, Tablets and mobile*/
-@media screen and (max-width: 968px) {
-  body{
-    height: 100%;
-  }
-  #main-content-container {
-    display: none;
-  }
-  h1 {
-    display: block;
-    text-align: center;
-    color: #272727;
-    margin-top: 40px;
+@media screen and (max-width: 468px) {
+  #weather-details-container #weather-details-content {
+    grid-template-columns: 1fr;
   }
 }
